# geodiff-action

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml  test.yaml
src/: geodiff.py  git_utils.py  main.py
tests/: conftest.py  test_functions.py  test_geodiff.py  test_git_history_mode.py  test_git_utils.py
